# img420-final-project-7

./: .gitignore  LICENSE  README.md
code/: CMakeLists.txt  CMakeSettings.json  launch.vs.json
code/src/: entity.cpp  entity.h  interaction_manager.cpp  interaction_manager.h  recipe.cpp  recipe.h  register_types.cpp  register_types.h  status_effect.cpp  status_effect.h
docs/: API_REFERENCE.md  BUILD_INSTRUCTIONS.md  USER_GUIDE.md
waking-of-the-witch/: Waking of the Witch.csproj  Waking of the Witch.sln  icon.svg.import  project.godot
waking-of-the-witch/assets/: Witch_Tilemap.png.import  background_decals.ase  background_decals.png.import  glowvine.ase  glowvine.png.import  large_column_pieces.ase  large_column_pieces.png.import  rockcolumn.ase  rockcolumn.png.import
waking-of-the-witch/recipes/: fire and gasoline.tres  water_and_fire.tres
waking-of-the-witch/scenes/: ash_particles.tscn  death_screen.tscn  enemy.tscn  enemy_fire_spell.tscn  fire_spell.tscn  fog.gdshader  player.tscn  tilemap.tscn  water_spell.tscn  world.tscn
waking-of-the-witch/scripts/: CharacterController.cs  DeathScreen.cs  Enemy.cs  Health.cs  HitBox.cs  HurtBox.cs  Spell.cs  Vignette.cs  World.cs  lava.gdshader  vignette.gdshader
waking-of-the-witch/scripts/EnemyBehaviorTree/: BTNode.cs
waking-of-the-witch/scripts/EnemyBehaviorTree/Actions/: BTAttack.cs  BTChasePlayer.cs  BTFlee.cs  BTStandby.cs
waking-of-the-witch/scripts/EnemyBehaviorTree/Composites/: BTSelector.cs  BTSequence.cs
waking-of-the-witch/scripts/EnemyBehaviorTree/Conditions/: BTCanAttack.cs  BTIsHealthCritical.cs  BTIsPlayerInRange.cs
waking-of-the-witch/sprites/: Player.png.import  enemy.png.import
waking-of-the-witch/status_effects/: fire.tscn  gasoline.tscn  inferno.tscn  water.tscn
waking-of-the-witch/tests/: test.tscn
